# shopifly

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  RALPH_PROMPT.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run_dashboard.py  start_dashboard.sh
.beads/: issues.jsonl
.github/workflows/: tests.yml
analysis/: __init__.py  classifier.py  interview_reranker.py
config/: settings.py
dashboard/: app.py  charts.py  data.py
docs/: CODE_REVIEW.md  architecture_flowchart.txt  reddit_api_application.html  reddit_api_application.md  reddit_scraper_code.py
docs/adr/: 001-streamlit-dashboard.md  002-sqlite-storage.md  003-reddit-rss.md  004-haiku-classification.md
docs/plans/: deployment-orchestration.md  dynamic-chasing-island.md  meta-shopifly-orchestrator.md  refactored-wobbling-quokka.md
research/: __init__.py  interview_schema.py  interview_storage.py  transcript_classifier.py  transcription.py
scrapers/: __init__.py  appstore.py  base.py  community.py  reddit.py  reddit_selenium.py  twitter.py
scripts/: export_interview_report.py
storage/: __init__.py  airtable.py  base.py  sqlite.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_appstore_scraper.py  test_community_scraper.py  test_dashboard_live.py  test_full_pipeline.py  test_interview_research.py  test_reddit_selenium.py  test_transcription_pipeline.py
tests/fixtures/: sample_interview.vtt  sample_transcript.json
tests/integration/: test_cli.py  test_community_scraper.py  test_reddit_selenium.py  test_scraping_pipeline.py
(+9 files in other folders)
