[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-requirements-gatherer"
version = "0.1.0"
description = "Collect and analyze Shopify merchant pain points to identify app opportunities"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "praw>=7.7.0",
    "tweepy>=4.14.0",
    "anthropic>=0.18.0",
    "pyairtable>=2.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "tenacity>=8.2.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
shopify-gather = "main:app"

[tool.setuptools.packages.find]
include = ["config*", "scrapers*", "analysis*", "storage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
